--- a/APPVIEW/Views/Color/Edit.cshtml
+++ b/APPVIEW/Views/Color/Edit.cshtml
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Colorcode" class="col-sm-2 col-form-label">Name Color</label>
+                        <label asp-for="Colorcode" class="col-sm-2 col-form-label">Code</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" asp-for="Colorcode" placeholder="Enter Color code" />
                             <span asp-validation-for="Colorcode" class="text-danger"></span>
