--- a/APPVIEW/Views/Home/Details.cshtml
+++ b/APPVIEW/Views/Home/Details.cshtml
@@ -162,112 +162,180 @@
 		<div class="container">
 			<ul class="nav nav-tabs" id="myTab" role="tablist">
 				<li class="nav-item">
-					<a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Description</a>
+					<a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Hướng dẫn chọn size</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
-					 aria-selected="false">Specification</a>
+					<a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+				   aria-selected="false">Description</a>
 				</li>
-				<li class="nav-item">
+				@*<li class="nav-item">
 					<a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
 					 aria-selected="false">Comments</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" id="review-tab" data-toggle="tab" href="#review" role="tab" aria-controls="review"
+					<a class="nav-link " id="review-tab" data-toggle="tab" href="#review" role="tab" aria-controls="review"
 					 aria-selected="false">Reviews</a>
-				</li>
+				</li>*@
 			</ul>
 			<div class="tab-content" id="myTabContent">
 				<div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
-					<p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature women of all shapes
-						and sizes enjoying themselves .Born between the two world wars, Beryl Cook eventually left Kendrick School in
-						Reading at the age of 15, where she went to secretarial school and then into an insurance office. After moving to
-						London and then Hampton, she eventually married her next door neighbour from Reading, John Cook. He was an
-						officer in the Merchant Navy and after he left the sea in 1956, they bought a pub for a year before John took a
-						job in Southern Rhodesia with a motor company. Beryl bought their young son a box of watercolours, and when
-						showing him how to use it, she decided that she herself quite enjoyed painting. John subsequently bought her a
-						child’s painting set for her birthday and it was with this that she produced her first significant work, a
-						half-length portrait of a dark-skinned lady with a vacant expression and large drooping breasts. It was aptly
-						named ‘Hangover’ by Beryl’s husband and</p>
-					<p>It is often frustrating to attempt to plan meals that are designed for one. Despite this fact, we are seeing
-						more and more recipe books and Internet websites that are dedicated to the act of cooking for one. Divorce and
-						the death of spouses or grown children leaving for college are all reasons that someone accustomed to cooking for
-						more than one would suddenly need to learn how to adjust all the cooking practices utilized before into a
-						streamlined plan of cooking that is more efficient for one person creating less</p>
+					<img style="width:100%" src="~/images/chossesize.jpg" />
 				</div>
+
 				<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 					<div class="table-responsive">
 						<table class="table">
 							<tbody>
 								<tr>
 									<td>
-										<h5>Width</h5>
+										<h5>Color</h5>
 									</td>
 									<td>
-										<h5>128mm</h5>
+									@{
+										var lstC1 = new List<Guid>();
+									}
+									@foreach (var pd in ViewBag.lspd)
+									{
+										if (lstC1.Any(c => c == pd.Id_Color))
+										{
+											continue;
+										}
+										@foreach (var item in ViewBag.Color)
+										{
+											if (pd.Id_Color == item.Id)
+											{
+												lstC1.Add(pd.Id_Color);
+												<h5 style="display: inline-block; margin-right: 10px;">@item.Name mmm</h5>
+
+											}
+										}
+									}																
 									</td>
 								</tr>
 								<tr>
 									<td>
-										<h5>Height</h5>
+										<h5>Size</h5>
 									</td>
 									<td>
-										<h5>508mm</h5>
+
+									@{
+										var lstS1 = new List<Guid>();
+									}
+									@foreach (var pd in ViewBag.lspd)
+									{
+										if (lstS1.Any(c => c == pd.Id_Size))
+										{
+											continue;
+										}
+										@foreach (var item in ViewBag.Size)
+										{
+											if (pd.Id_Size == item.Id)
+											{
+												lstS1.Add(pd.Id_Size);
+												<h5 style="display: inline-block; margin-right: 10px;">@item.Name,</h5>
+											}
+
+										}
+									}
 									</td>
 								</tr>
 								<tr>
 									<td>
-										<h5>Depth</h5>
+									<h5> Category</h5>
 									</td>
 									<td>
-										<h5>85mm</h5>
+
+									@{
+										var lstca = new List<Guid>();
+									}
+									@foreach (var pd in ViewBag.lspd)
+									{
+										if (lstca.Any(c => c == pd.Id_Category))
+										{
+											continue;
+										}
+										@foreach (var item in ViewBag.Category)
+										{
+											if (pd.Id_Category == item.Id)
+											{
+												lstca.Add(pd.Id_Category);
+												<h5 style="display: inline-block; margin-right: 10px;">@item.Name,</h5>
+											}
+
+										}
+									}
 									</td>
 								</tr>
 								<tr>
 									<td>
-										<h5>Weight</h5>
+									<h5>Material</h5>
 									</td>
-									<td>
-										<h5>52gm</h5>
-									</td>
+								<td>
+
+									@{
+										var lstMa = new List<Guid>();
+									}
+									@foreach (var pd in ViewBag.lspd)
+									{
+										if (lstMa.Any(c => c == pd.Id_Material))
+										{
+											continue;
+										}
+										@foreach (var item in ViewBag.Material)
+										{
+											if (pd.Id_Material == item.Id)
+											{
+												lstMa.Add(pd.Id_Material);
+												<h5 style="display: inline-block; margin-right: 10px;">@item.Name,</h5>
+											}
+
+										}
+									}
+								</td>
 								</tr>
 								<tr>
 									<td>
-										<h5>Quality checking</h5>
+										<h5>Supplier</h5>
 									</td>
-									<td>
-										<h5>yes</h5>
-									</td>
-								</tr>
+								<td>
+
+									@{
+										var lstSu = new List<Guid>();
+									}
+									@foreach (var pd in ViewBag.lspd)
+									{
+										if (lstSu.Any(c => c == pd.Id_supplier))
+										{
+											continue;
+										}
+										@foreach (var item in ViewBag.Supplier)
+										{
+											if (pd.Id_supplier == item.Id)
+											{
+												lstSu.Add(pd.Id_supplier);
+												<h5 style="display: inline-block; margin-right: 10px;">@item.Name,</h5>
+											}
+
+										}
+									}
+								</td>
+								</tr>	
 								<tr>
 									<td>
-										<h5>Freshness Duration</h5>
+										<h5>Description</h5>
 									</td>
-									<td>
-										<h5>03days</h5>
-									</td>
+								<td>
+
+								<h5>@Model.Desciption</h5>
+
+								</td>
 								</tr>
-								<tr>
-									<td>
-										<h5>When packeting</h5>
-									</td>
-									<td>
-										<h5>Without touch of hand</h5>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<h5>Each Box contains</h5>
-									</td>
-									<td>
-										<h5>60pcs</h5>
-									</td>
-								</tr>
+							
 							</tbody>
 						</table>
 					</div>
 				</div>
-				<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+		@*		<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="comment_list">
@@ -468,7 +536,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>*@
 			</div>
 		</div>
 	</section>
