--- a/APPVIEW/Views/ProductDetail/Create.cshtml
+++ b/APPVIEW/Views/ProductDetail/Create.cshtml
@@ -119,7 +119,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
+                <input asp-for="Quantity" type="number" min="0" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -129,12 +129,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" type="number" min="0" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <label asp-for="Status"  class="control-label"></label>
+                <input asp-for="Status" type="number" min="0" class="form-control" />
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
                                             
