--- a/APPVIEW/Views/ProductDetail/GetList.cshtml
+++ b/APPVIEW/Views/ProductDetail/GetList.cshtml
@@ -3,171 +3,201 @@
 @{
     ViewData["Title"] = "GetList";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    int stt = 0;
 }
 
-<h1>GetList</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table table-light table-striped">
-    <thead>
-        <tr>
-           
-            <th scope="col">
-                Category
-            </th>
-            <th scope="col">
-                Size
-            </th>
-           
-            <th scope="col">
-               Material
-            </th>
-            <th scope="col">
-               Color
-            </th>
-            <th scope="col">
-               Supplier
-            </th>
-            <th scope="col">
-              Quantity
-            </th>
-            <th scope="col">
-              Desciption
-            </th>
-            <th scope="col">
-              Price
-            </th>
-            <th scope="col">
-               Status
-            </th>
-            <th scope="col">
-               Name
-            </th>
-            <th scope="col">
-              Create_date
-            </th>
-            <th>
-               Update_date
-            </th>
-            <th scope="col">
-               Create_by
-            </th>
-            <th scope ="col">
-               Update_by
-            </th>
-            <th scope="col">
-              IMG
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-           
-            <td>
-                    @foreach (var obj in ViewBag.Category)
-                    {
-                        if (item.Id_Category == obj.Id)
-                        {
-                            <p>
-                                @obj.Name
-                            </p>
-                        }
-                    }
-            </td>
-            <td>
-                    @foreach (var obj in ViewBag.Size)
-                    {
-                        if (item.Id_Size == obj.Id)
-                        {
-                            <p>
-                                @obj.Name
-                            </p>
-                        }
-                    }
-            </td>
-           
-            <td>
-                    @foreach (var obj in ViewBag.Material)
-                    {
-                        if (item.Id_Material == obj.Id)
-                        {
-                            <p>
-                                @obj.Name
-                            </p>
-                        }
-                    }
-            </td>
-            <td>
-                    @foreach (var obj in ViewBag.Color)
-                    {
-                        if (item.Id_Color == obj.Id)
-                        {
-                            <p>
-                                @obj.Name
-                            </p>
-                        }
-                    }
-            </td>
-            <td>
-                    @foreach (var obj in ViewBag.Supplier)
-                    {
-                        if (item.Id_supplier == obj.Id)
-                        {
-                                        <p>
-                                @obj.Name
-                                        </p>
-                        }
-                    }
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Desciption)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Create_date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Update_date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Create_by)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Update_by)
-            </td>
+<form asp-controller="productdetail" asp-action="getlist" class="row contact_form" method="post">
+    <div class="col-md-5 form-group">
+        <input type="text" class="form-control" name="tk" placeholder="Nhập tên sản phẩm để tìm kiếm">
+        <button type="submit" style="background-color:brown ; color:black">Search</button>
+    </div>
+</form>
 
-            <td>                
-                    @foreach (var obj in ViewBag.Image)
+<div class="card">
+    <div class="card-header">
+        <h5 class="mb-0">Product Details</h5>
+    </div>
+    <div class="card-body">
+        <a class="btn btn-success waves-effect waves-light" asp-action="Create">
+            <span class="mdi mdi-plus-thick">Create new</span>
+        </a>
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>STT</th>
+                        <th>Name</th>
+                        <th>Category</th>
+                        <th>Size</th>
+                        <th>Material</th>
+                        <th>Color</th>
+                        <th>Supplier</th>
+                        <th>Quantity</th>
+                        <th>
+                            Price
+                        </th>
+                        <th>
+                            Status
+                        </th>                      
+                        <th>
+                            Create_date
+                        </th>
+                        <th>
+                            Update_date
+                        </th>
+                        <th>
+                            Create_by
+                        </th>
+                        <th>
+                            Update_by
+                        </th>
+                        <th>
+                            IMG
+                        </th>
+                      
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                     @if (Model != null && Model.Any())
                     {
-                        if (item.Id == obj.IdProductdetail)
+                        @foreach (var item in Model)
                         {
-                            <img src="~/images/@obj.Name" alt="Fjords" width="50px" height="50px">
-                            break;
+                            <tr>
+                                <td>@(
+                                    stt += 1
+                                    )</td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @foreach (var obj in ViewBag.Category)
+                                    {
+                                        if (item.Id_Category == obj.Id)
+                                        {
+                                            <p>
+                                                @obj.Name
+                                            </p>
+                                        }
+                                    }
+                                </td>
+                                <td>
+                                    @foreach (var obj in ViewBag.Size)
+                                    {
+                                        if (item.Id_Size == obj.Id)
+                                        {
+                                            <p>
+                                                @obj.Name
+                                            </p>
+                                        }
+                                    }
+                                </td>
+
+                                <td>
+                                    @foreach (var obj in ViewBag.Material)
+                                    {
+                                        if (item.Id_Material == obj.Id)
+                                        {
+                                            <p>
+                                                @obj.Name
+                                            </p>
+                                        }
+                                    }
+                                </td>
+                                <td>
+                                    @foreach (var obj in ViewBag.Color)
+                                    {
+                                        if (item.Id_Color == obj.Id)
+                                        {
+                                            <p>
+                                                @obj.Name
+                                            </p>
+                                        }
+                                    }
+                                </td>
+                                <td>
+                                    @foreach (var obj in ViewBag.Supplier)
+                                    {
+                                        if (item.Id_supplier == obj.Id)
+                                        {
+                                            <p>
+                                                @obj.Name
+                                            </p>
+                                        }
+                                    }
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Quantity)
+                                </td>
+                              
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Price)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Status)
+                                </td>
+
+                                <td>
+                                    @{
+                                        DateTime createDate = item.Create_date;
+                                        string formattedDate = createDate != DateTime.MinValue
+                                        ? createDate.ToString("dd/MM/yyyy")
+                                        : "Not changed";
+                                    }
+                                    @formattedDate
+                                </td>
+                                <td>
+                                    @{
+                                        DateTime updatedDate = item.Update_date;
+                                        string formattedUpdateDate = updatedDate != DateTime.MinValue
+                                        ? updatedDate.ToString("dd/MM/yyyy")
+                                        : "Not changed";
+                                    }
+                                    @formattedUpdateDate
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Create_by)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Update_by)
+                                </td>
+
+                                <td>
+                                    @foreach (var obj in ViewBag.Image)
+                                    {
+                                        if (item.Id == obj.IdProductdetail)
+                                        {
+                                            <img src="~/images/@obj.Name" alt="Fjords" width="50px" height="50px">
+                                            break;
+                                        }
+                                    }
+                                </td>
+
+                                <td>
+
+                                    <a href="@Url.Action("Edit", new { id = item.Id  })" class="btn btn-info waves-effect waves-light">
+                                        <span class="mdi mdi-pencil-box-outline"></span>Edit
+                                    </a> <a href="@Url.Action( "Details","Home", new { id = item.Id  })" class="btn btn-info waves-effect waves-light">
+                                        <span class="mdi mdi-pencil-box-outline"></span>Details
+                                    </a>
+                                    <a href="@Url.Action("Delete", new { id = item.Id  })" class="btn btn-danger waves-effect waves-light">
+                                        <span class="mdi mdi-delete"></span>Delete
+                                    </a>
+                                </td>
+                            </tr>
                         }
                     }
-            </td>
-
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                    @Html.ActionLink("Details", "Details","Home", new {  id=item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new {  id=item.Id })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                    else
+                    {
+                        <tr>
+                            <td colspan="8" class="text-center">No Data.</td>
+                        </tr>
+                    }
+                </tbody>
+             
+            </table>
+        </div>
+    </div>
+</div>
