--- a/APPVIEW/Views/Home/ViewBill.cshtml
+++ b/APPVIEW/Views/Home/ViewBill.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
     Guid id;
     ViewBag.Tinh = "";
+    
 }
 
 
@@ -194,7 +195,7 @@
                             
                                 <ul class="list list_2">
                                    
-                                    <li><a href="#" style="text-decoration:none;color:black">Shipping <span><input width="30px" style="height:30px" readonly id="feeship" name="ship"></span></a></li>
+                                    <li><a href="#" style="text-decoration:none;color:black">Phí ship :  <span><input width="30px" style="height:30px" readonly id="feeship" name="ship"></span></a></li>
                                    
                                 </ul>
                        
