--- a/APPVIEW/Views/Home/DatHang.cshtml
+++ b/APPVIEW/Views/Home/DatHang.cshtml
@@ -1,9 +1,8 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "DatHang";
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
 }
-
+@*
 <h1 style="color:forestgreen">Đặt hàng thành công</h1>
 <h2 style="margin-top:50px">Thông tin đơn hàng</h2>
 
@@ -18,5 +17,125 @@
     <p>Số lượng : @ViewBag.Billct.Amount </p>
     <p>Size : @ViewBag.sizee.Name </p>
     <p>Màu : @ViewBag.Collor.Name </p>
-    
-</div>
+
+</div> *@
+
+
+
+
+
+<body>
+    <!--================ Start Header Menu Area =================-->
+
+    <section class="blog-banner-area" id="category">
+        <div class="container h-100">
+            <div class="blog-banner">
+                <div class="text-center">
+                    <h1 style="color:green">Đặt hàng thành công</h1>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ================ end banner area ================= -->
+    <!--================Order Details Area =================-->
+    <section class="order_details section-margin--small">
+        <div class="container">
+
+
+            <div class="order_details_table">
+                <h2>Chi tiết đơn hàng </h2>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Tên sản phẩm</th>
+                                <th scope="col">Số lượng</th>
+                                <th scope="col">Size</th>
+                                <th scope="col">Màu</th>
+                                <th scope="col">Giá</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <p>@ViewBag.sp.Name</p>
+                                </td>
+                                <td>
+                                    <h5>@ViewBag.Billct.Amount</h5>
+                                </td>
+                                <td>
+                                    <p>@ViewBag.sizee.Name</p>
+                                </td>
+                                <td>
+                                    <p>@ViewBag.Collor.Name</p>
+                                </td>
+                                <td>
+                                    <p>@ViewBag.Billct.Price</p>
+                                </td>
+
+                            </tr>
+                            <tr>
+
+                                <td><h4 style="color:black"><hr style="color:black"></h4></td>
+                                <td><h4 style="color:black"><hr style="color:black"></h4></td>
+                                <td><h4 style="color:black"><hr style="color:black"></h4></td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    <h4>Shipping</h4>
+                                </td>
+                                <td>
+                                    <h5></h5>
+                                </td>
+                                <td>
+                                    <p>@ViewBag.Bill.ShipFee</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h4>Số điện thoại</h4>
+                                </td>
+                                <td>
+                                    <h5></h5>
+                                </td>
+                                <td>
+                                    <p>@ViewBag.Bill.PhoneNumber</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h4>Địa chỉ</h4>
+                                </td>
+                                <td>
+                                    <h5></h5>
+                                </td>
+                                <td>
+                                    <p>@ViewBag.Bill.Address</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h4>Tổng tiền</h4>
+                                </td>
+                                <td>
+                                    <h5></h5>
+                                </td>
+                                <td>
+                                    <p>@ViewBag.Bill.TotalMoney</p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================End Order Details Area =================-->
+
+
+
+
+
+</body>
