--- a/APPVIEW/Views/ProductDetail/Create.cshtml
+++ b/APPVIEW/Views/ProductDetail/Create.cshtml
@@ -152,7 +152,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="getlist">Back to List</a>
 </div>
 <@*select asp-for="Id_supplier" id="color" class="selectpicker form-control" multiple aria-label="size 3 select example" onchange="addToList()">
 
