--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -99,6 +99,7 @@
                            
                             </div>    
                             <input name="pay" id="pay" hidden value="shipcod" />
+                            <input name="voucher" id="voucher" hidden value="@ViewBag.DiscountAmount" />
                         <div class="text-center  form-group">
                             <button type="submit" class="button button-paypal" id="btncf" >Order Confirmation</button>
                         </div>
@@ -123,18 +124,18 @@
                                 <li>
                                     <h6 style="font-size: 14px">Thông tin giảm giá:</h6>
                                     <p>Mã giảm giá: <span>@ViewBag.VoucherCode</span></p>
-                                    <p>Số tiền giảm: <span>$@ViewBag.DiscountAmount</span></p>
+                                    <p>Số tiền giảm: <span>@ViewBag.DiscountAmount</span>VND</p>
                                 </li>
 
                             }
-                            <li><a href="#">Shipping <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="0" name="phiship" readonly id="feeship">VND</span></a></li>
+                            <li><a href="#">Shipping <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@ViewBag.fee" name="phiship" readonly id="feeship">VND</span></a></li>
                             @if (ViewBag.DiscountAmount != null)
                             {
-                                <li><a href="#">Total <span> <input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT - ViewBag.DiscountAmount)" id="tShip" /> VND</span></a></li>
+                                <li><a href="#">Total <span> <input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT - ViewBag.DiscountAmount+ViewBag.fee)" id="tShip" /> VND</span></a></li>
                             }
                             else
                             {
-                                <li><a href="#">Total <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@ViewBag.TT" id="tShip" /> VND</span></a></li>
+                                <li><a href="#">Total <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT + ViewBag.fee)" id="tShip" /> VND</span></a></li>
                             }
                           </ul>
                             <div class="payment_item">
@@ -334,8 +335,7 @@
     }
     
 
-    
-
+  
 </script>
 <script>
     function confirmCancelVoucher() {
